--- a/Sk-master/pom.xml
+++ b/Sk-master/pom.xml
@@ -4,11 +4,14 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>org.example</groupId>
-    <artifactId>scala_project</artifactId>
+    <groupId>com.wudi</groupId>
+    <artifactId>Sk-master</artifactId>
     <version>1.0-SNAPSHOT</version>
 
-
+    <properties>
+        <maven.compiler.source>8</maven.compiler.source>
+        <maven.compiler.target>8</maven.compiler.target>
+    </properties>
 
     <dependencies>
         <!--Scala依赖的导入-->
@@ -27,6 +30,11 @@
             <groupId>com.typesafe.akka</groupId>
             <artifactId>akka-remote_2.12</artifactId>
             <version>2.5.21</version>
+        </dependency>
+        <dependency>
+            <groupId>com.wudi</groupId>
+            <artifactId>Sk-common</artifactId>
+            <version>1.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
 
