--- a/Sk-work/pom.xml
+++ b/Sk-work/pom.xml
@@ -4,12 +4,14 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>org.example</groupId>
-    <artifactId>scala_project</artifactId>
+    <groupId>com.wudi</groupId>
+    <artifactId>Sk-worker</artifactId>
     <version>1.0-SNAPSHOT</version>
 
-
-
+    <properties>
+        <maven.compiler.source>8</maven.compiler.source>
+        <maven.compiler.target>8</maven.compiler.target>
+    </properties>
     <dependencies>
         <!--Scala依赖的导入-->
         <dependency>
@@ -24,10 +26,9 @@
             <version>2.5.21</version>
         </dependency>
         <dependency>
-            <groupId>com.typesafe.akka</groupId>
-            <artifactId>akka-remote_2.12</artifactId>
-            <version>2.5.21</version>
+            <groupId>com.wudi</groupId>
+            <artifactId>Sk-common</artifactId>
+            <version>1.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
-
 </project>
